companies/AdBazaar/content-calendar-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-bazaar-content-calendar
  labels:
    app: ad-bazaar-content-calendar
    tier: social-automation
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5092
    protocol: TCP
    name: http
  selector:
    app: ad-bazaar-content-calendar
